@@ -45,8 +45,8 @@ DEBUG_TOOLBAR_PANELS = (
 #................................................
 
 LEAFLET_CONFIG['TILES'] = [
-    (gettext_noop('Scan'), 'http://{s}.tile.osm.org/{z}/{x}/{y}.png'),
-    (gettext_noop('Ortho'), 'http://{s}.tiles.mapbox.com/v3/openstreetmap.map-4wvf9l0l/{z}/{x}/{y}.jpg'),
+    (gettext_noop('Scan'), 'http://{s}.tile.osm.org/{z}/{x}/{y}.png', '(c) OpenStreetMap Contributors'),
+    (gettext_noop('Ortho'), 'http://{s}.tiles.mapbox.com/v3/openstreetmap.map-4wvf9l0l/{z}/{x}/{y}.jpg', '(c) MapBox'),
 ]
 LEAFLET_CONFIG['SRID'] = 3857
 
